// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-send should bounce on unknown message 1`] = `
[
  {
    "$seq": 1,
    "events": [
      {
        "$type": "storage-charged",
        "amount": "0.000000005",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Unknown string",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQAtYS6QVmMwOK0owmHMToN6uyLer1UqtPhbWkQ1wsHdJ-dM",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "failed",
        "errorCode": 130,
        "errorMessage": "Invalid incoming message",
      },
      {
        "$type": "sent-bounced",
        "message": {
          "body": {
            "cell": "x{FFFFFFFF00000000556E6B6E6F776E20737472696E67}",
            "type": "cell",
          },
          "bounce": false,
          "from": "kQAtYS6QVmMwOK0owmHMToN6uyLer1UqtPhbWkQ1wsHdJ-dM",
          "to": "@treasure(treasure)",
          "type": "internal",
          "value": "9.996013",
        },
      },
    ],
  },
]
`;

exports[`feature-send should send reply correctly 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "type": "known",
            "value": {
              "$$type": "Deploy",
              "queryId": 0n,
            },
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQAtYS6QVmMwOK0owmHMToN6uyLer1UqtPhbWkQ1wsHdJ-dM",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 8234n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Deploy success",
              "type": "text",
            },
            "to": null,
            "type": "external-out",
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-send should send reply correctly 2`] = `
[
  {
    "$seq": 1,
    "events": [
      {
        "$type": "storage-charged",
        "amount": "0.000000005",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Hello",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQAtYS6QVmMwOK0owmHMToN6uyLer1UqtPhbWkQ1wsHdJ-dM",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 7939n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "World",
              "type": "text",
            },
            "bounce": true,
            "from": "kQAtYS6QVmMwOK0owmHMToN6uyLer1UqtPhbWkQ1wsHdJ-dM",
            "to": "@treasure(treasure)",
            "type": "internal",
            "value": "9.990889",
          },
        ],
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Something",
              "type": "text",
            },
            "to": null,
            "type": "external-out",
          },
        ],
      },
    ],
  },
]
`;
